--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cdrake-se",
-    "version": "1.0.9",
+    "version": "1.1.0",
     "description": "A library that will make your life easier when you want to search the internet, not pay APIs, search from your computer for free!",
     "author": "Rodolfo Herrera Hernandez @codewithrodi",
     "license": "MIT",
@@ -28,7 +28,7 @@
         "autocomplete",
         "suggest",
         "self-hosted",
-        "search-engine-client",
+        "youtube",
         "aol",
         "qwant",
         "ask",
@@ -41,6 +41,8 @@
         "axios": "^0.24.0",
         "cheerio": "^1.0.0-rc.10",
         "node-suggest": "^1.0.2",
-        "wikipedia": "^2.0.0"
+        "npm": "^9.8.1",
+        "wikipedia": "^2.0.0",
+        "youtube-search-api": "^1.2.1"
     }
 }
